# tutor

./: .gitignore  MANIFEST.in  README.md  bumpversion.py  publish.sh  pyproject.toml  requirements.txt  settings.ini  settings.py  synthesize.py  tutor.py
tutor/: __init__.py  prompts.toml  settings.ini  settings.py  synthesize.py  tutor.py  words_en.txt  words_nl.txt
