[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor"
version = "1.3.2"
description = "Language tutor for learning Spanish and other languages with GPT"
readme = "README.md"
authors = [{ name = "HP Harmsen", email = "hp@harmsen.nl" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ChatGPT", "GPT4", "GPT3.5", "Spanish", "Language learning"]
dependencies = [
    "openai",
    "tenacity",
    "gpteasy",
    #"gtts",
    #"playsound",
    #"python-dateutil",
    #"PyObjC"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "pytest", "build", "twine", "nox"]

[project.urls]
Homepage = "https://github.com/hpharmsen/tutor"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["tutor", "tutor.words.txt"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
"*" = ["*.txt"]
tutor = ["words.txt"]